[package]
name = "v6_pmtu_hbh_rust"
version = "0.1.0"
authors = ["Luuk Hendriks <mail@luukhendriks.eu>"]
edition = "2015"

[dependencies]
structopt = { version = "0.2", default-features = false }
bincode = "1.1"
serde = "1.0"
serde_derive = "1.0"
pcap = "0.7"
byteorder = "1"

[dependencies.pnet]
version = "0.22.0"
